--- a/index.html
+++ b/index.html
@@ -55,36 +55,35 @@
         </section>
         <hr>
         <section class="secondsection">
-            <span class="text">What i have done so far</span>
-            <h1>Work Experience</h1>
-           <div class="box">
-             <div class="vertical">
-                <img class="html-img" src="html.png" alt="">
-                <div class="title">Html Developer <br>(2023 -24)</div>
-                <div class="text-des">(Html start 2023 form youtube and build skills and develope Project.) </div>
-             </div>
-             <div class="vertical">
-                <img class="html-img" src="css.png" alt="">
-                <div class="title">css Developer <br>(2023 -24)</div>
-                <div class="text-des">(css start 2023 form youtube and build skills and develope Project.) </div>
-             </div>
-             <div class="vertical">
-                <img class="html-img" src="javascript.png" alt="">
-                <div class="title">Javascript Developer <br>(2023 -24)</div>
-                <div class="text-des">(Javascript start 2023 form youtube and build skills and develope Project.) </div>
-             </div>
-             <div class="vertical">
-                <img class="html-img" src="typescript.png" alt="">
-                <div class="title">Typescript Developer <br>(2023 -24)</div>
-                <div class="text-des">(Typescript start 2024 form Governor house and build skills and develope Project.) </div>
-             </div>
-             <div class="vertical">
-                <img class="html-img" src="cit.png" alt="">
-                <div class="title">CIT certified ,MS office ,Graphic designing<br>(2023 -24)</div>
-                <div class="text-des">(CIT start 2023 form Roshi institute and build skills and develope Project.) </div>
-             </div>
-           </div>
-             
+          <span class="text">What I Have Done So Far</span>
+          <h1>Work Experience</h1>
+          <div class="box">
+            <div class="vertical">
+              <img class="html-img" src="html.png" alt="HTML Developer">
+              <div class="title">HTML Developer <br>(2023 - 24)</div>
+              <div class="text-des">Started learning HTML in 2023 from YouTube, built skills, and developed projects.</div>
+            </div>
+            <div class="vertical">
+              <img class="html-img" src="css.png" alt="CSS Developer">
+              <div class="title">CSS Developer <br>(2023 - 24)</div>
+              <div class="text-des">Started learning CSS in 2023 from YouTube, built skills, and developed projects.</div>
+            </div>
+            <div class="vertical">
+              <img class="html-img" src="javascript.png" alt="JavaScript Developer">
+              <div class="title">JavaScript Developer <br>(2023 - 24)</div>
+              <div class="text-des">Started learning JavaScript in 2023 from YouTube, built skills, and developed projects.</div>
+            </div>
+            <div class="vertical">
+              <img class="html-img" src="typescript.png" alt="TypeScript Developer">
+              <div class="title">TypeScript Developer <br>(2023 - 24)</div>
+              <div class="text-des">Started learning TypeScript in 2024 at Governor House, built skills, and developed projects.</div>
+            </div>
+            <div class="vertical">
+              <img class="html-img" src="cit.png" alt="CIT Certified">
+              <div class="title">CIT Certified, MS Office, Graphic Designing <br>(2023 - 24)</div>
+              <div class="text-des">Started CIT in 2023 at Roshi Institute, built skills, and developed projects.</div>
+            </div>
+          </div>
         </section>
         <hr>
         <section id="projects">
@@ -145,9 +144,9 @@
             <form action="https://api.web3forms.com/submit" method="POST">
               <input type="hidden" name="access_key" value="1424fcf2-a0ae-41c1-b03e-16bee8136c3a">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
                 <label for="message">Message :</label>
                 <textarea type="message" name="message" placeholder="Your message" class="contact-inputs"></textarea>
                 <input type="submit" value="Submit">
